--- a/src/app.css
+++ b/src/app.css
@@ -3,12 +3,18 @@
 @import 'tailwindcss/utilities';
 
 :root {
-  color-scheme: light dark;
+	color-scheme: light dark;
 	--form-control-border-radius: 6px;
 }
 
 body {
-	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+	font-family:
+		system-ui,
+		-apple-system,
+		BlinkMacSystemFont,
+		'Segoe UI',
+		Roboto,
+		sans-serif;
 	min-height: 100vh;
 	margin: 0;
 	background-color: Canvas;
@@ -16,17 +22,17 @@ body {
 	padding: 1rem;
 }
 
-input[type="text"] {
+input[type='text'] {
 	background-color: Field;
 	color: FieldText;
 	border: 1px solid color-mix(in srgb, Canvas, FieldText);
 	border-radius: var(--form-control-border-radius);
 }
 
-input[type="checkbox"] {
+input[type='checkbox'] {
 	background-color: Field;
 	border: 1px solid ButtonBorder;
-	border-radius: calc(0.5*var(--form-control-border-radius));
+	border-radius: calc(0.5 * var(--form-control-border-radius));
 }
 
 button {
