--- a/web/src/app.css
+++ b/web/src/app.css
@@ -90,4 +90,17 @@
 	body {
 		@apply bg-background text-foreground;
 	}
+
+	.stretched-link-container {
+		position: relative;
+	}
+	.stretched-link::after {
+		position: absolute;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		z-index: 1;
+		content: '';
+	}
 }
