--- a/web/src/app.css
+++ b/web/src/app.css
@@ -19,6 +19,7 @@
 
 		--radius: 0.5rem;
 		--map-point: red;
+		--map-point-text: white;
 		--map-line: red;
 		--map-land: var(--foreground) / 50%;
 		--map-border: var(--muted-foreground);
