--- a/web/src/app.css
+++ b/web/src/app.css
@@ -41,6 +41,8 @@
 			--secondary-foreground: 0 0% 9%;
 			--accent: 0 0% 96.1%;
 			--accent-foreground: 0 0% 9%;
+			--warning: 41.2 99.8% 55.3%;
+			--warning-foreground: 0 0% 9%;
 			--destructive: 0 72.2% 50.6%;
 			--destructive-foreground: 0 0% 98%;
 			--ring: 0 0% 3.9%;
@@ -73,6 +75,8 @@
 			--secondary-foreground: 0 0% 98%;
 			--accent: 0 0% 14.9%;
 			--accent-foreground: 0 0% 98%;
+			--warning: 41.2 99.8% 55.3%;
+			--warning-foreground: 0 0% 9%;
 			--destructive: 0 62.8% 45.6%;
 			--destructive-foreground: 0 0% 98%;
 			--ring: 0 0% 83.1%;
